--- a/frontend/views/index.njk
+++ b/frontend/views/index.njk
@@ -84,25 +84,27 @@
 							    <td>SSMF-1</td>
 							    <td>Первый тип</td>
 							    <td>Иванов Петр</td>
-							    <td><time datetime="2017-04-17">17.04.2014</time></td>
-							    <td class="td-hint">
-							    	<button class="btn btn--edit">
-							    		<svg class="icon-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 1 39 39" xml:space="preserve">
-					              <g enable-background="new">
-					                <g>
-					                  <path class="icon-svg-letter" fill-rule="evenodd" clip-rule="evenodd" fill="#000" d="M29.513,13.293l-2.832-2.831c-0.626-0.626-1.641-0.626-2.267,0
-					                  L13.952,20.918c-0.234,0.234-0.352,0.527-0.411,0.83l-3.468,7.013c-0.291,0.789,0.342,1.496,1.131,1.13l7.015-3.466
-					                  c0.303-0.06,0.596-0.177,0.831-0.41l10.462-10.457C30.139,14.933,30.139,13.918,29.513,13.293z M12.173,28.357
-					                  c-0.395,0.183-0.749-0.196-0.565-0.565l2.622-4.33l2.275,2.274L12.173,28.357z M17.917,24.882
-					                  c-0.315-0.314-0.455-0.455-0.519-0.519c0.048,0.048,0.006,0.006-0.026-0.026c-0.005-0.005-0.017-0.017-0.02-0.019
-					                  c0-0.001-0.001-0.002-0.002-0.003l-1.699-1.698c-0.313-0.313-0.266-0.266-0.567-0.566l7.044-7.039l2.852,2.811L17.917,24.882z
-					                   M27.813,14.991l-1.7,1.699l-2.791-2.872l1.658-1.658c0.313-0.313,0.82-0.313,1.133,0l1.7,1.699
-					                  C28.127,14.172,28.127,14.679,27.813,14.991z"></path>
-					                </g>
-					              </g>
-					            </svg>
-							    	</button>
-							    </td>
+							    <td>
+							    	<time datetime="2017-04-17">17.04.2014</time>
+							    	<div class="td-hint">
+							    		<button class="btn btn--edit">
+								    		<svg class="icon-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 1 39 39" xml:space="preserve">
+						              <g enable-background="new">
+						                <g>
+						                  <path class="icon-svg-letter" fill-rule="evenodd" clip-rule="evenodd" fill="#000" d="M29.513,13.293l-2.832-2.831c-0.626-0.626-1.641-0.626-2.267,0
+						                  L13.952,20.918c-0.234,0.234-0.352,0.527-0.411,0.83l-3.468,7.013c-0.291,0.789,0.342,1.496,1.131,1.13l7.015-3.466
+						                  c0.303-0.06,0.596-0.177,0.831-0.41l10.462-10.457C30.139,14.933,30.139,13.918,29.513,13.293z M12.173,28.357
+						                  c-0.395,0.183-0.749-0.196-0.565-0.565l2.622-4.33l2.275,2.274L12.173,28.357z M17.917,24.882
+						                  c-0.315-0.314-0.455-0.455-0.519-0.519c0.048,0.048,0.006,0.006-0.026-0.026c-0.005-0.005-0.017-0.017-0.02-0.019
+						                  c0-0.001-0.001-0.002-0.002-0.003l-1.699-1.698c-0.313-0.313-0.266-0.266-0.567-0.566l7.044-7.039l2.852,2.811L17.917,24.882z
+						                   M27.813,14.991l-1.7,1.699l-2.791-2.872l1.658-1.658c0.313-0.313,0.82-0.313,1.133,0l1.7,1.699
+						                  C28.127,14.172,28.127,14.679,27.813,14.991z"></path>
+						                </g>
+						              </g>
+						            </svg>
+								    	</button>
+							    	</div>
+							   	</td>
 							  </tr>
 							  <tr>
 							    <td>
@@ -112,24 +114,26 @@
 							    <td>SSMF-2</td>
 							    <td>Второй тип</td>
 							    <td>Петров Иван</td>
-							    <td><time datetime="2017-04-17">17.04.2014</time></td>
-							    <td class="td-hint">
-							    	<button class="btn btn--edit">
-							    		<svg class="icon-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 1 39 39" xml:space="preserve">
-					              <g enable-background="new">
-					                <g>
-					                  <path class="icon-svg-letter" fill-rule="evenodd" clip-rule="evenodd" fill="#000" d="M29.513,13.293l-2.832-2.831c-0.626-0.626-1.641-0.626-2.267,0
-					                  L13.952,20.918c-0.234,0.234-0.352,0.527-0.411,0.83l-3.468,7.013c-0.291,0.789,0.342,1.496,1.131,1.13l7.015-3.466
-					                  c0.303-0.06,0.596-0.177,0.831-0.41l10.462-10.457C30.139,14.933,30.139,13.918,29.513,13.293z M12.173,28.357
-					                  c-0.395,0.183-0.749-0.196-0.565-0.565l2.622-4.33l2.275,2.274L12.173,28.357z M17.917,24.882
-					                  c-0.315-0.314-0.455-0.455-0.519-0.519c0.048,0.048,0.006,0.006-0.026-0.026c-0.005-0.005-0.017-0.017-0.02-0.019
-					                  c0-0.001-0.001-0.002-0.002-0.003l-1.699-1.698c-0.313-0.313-0.266-0.266-0.567-0.566l7.044-7.039l2.852,2.811L17.917,24.882z
-					                   M27.813,14.991l-1.7,1.699l-2.791-2.872l1.658-1.658c0.313-0.313,0.82-0.313,1.133,0l1.7,1.699
-					                  C28.127,14.172,28.127,14.679,27.813,14.991z"></path>
-					                </g>
-					              </g>
-					            </svg>
-							    	</button>
+							    <td>
+							    	<time datetime="2017-04-17">17.04.2014</time>
+							    	<div class="td-hint">
+							    		<button class="btn btn--edit">
+								    		<svg class="icon-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 1 39 39" xml:space="preserve">
+						              <g enable-background="new">
+						                <g>
+						                  <path class="icon-svg-letter" fill-rule="evenodd" clip-rule="evenodd" fill="#000" d="M29.513,13.293l-2.832-2.831c-0.626-0.626-1.641-0.626-2.267,0
+						                  L13.952,20.918c-0.234,0.234-0.352,0.527-0.411,0.83l-3.468,7.013c-0.291,0.789,0.342,1.496,1.131,1.13l7.015-3.466
+						                  c0.303-0.06,0.596-0.177,0.831-0.41l10.462-10.457C30.139,14.933,30.139,13.918,29.513,13.293z M12.173,28.357
+						                  c-0.395,0.183-0.749-0.196-0.565-0.565l2.622-4.33l2.275,2.274L12.173,28.357z M17.917,24.882
+						                  c-0.315-0.314-0.455-0.455-0.519-0.519c0.048,0.048,0.006,0.006-0.026-0.026c-0.005-0.005-0.017-0.017-0.02-0.019
+						                  c0-0.001-0.001-0.002-0.002-0.003l-1.699-1.698c-0.313-0.313-0.266-0.266-0.567-0.566l7.044-7.039l2.852,2.811L17.917,24.882z
+						                   M27.813,14.991l-1.7,1.699l-2.791-2.872l1.658-1.658c0.313-0.313,0.82-0.313,1.133,0l1.7,1.699
+						                  C28.127,14.172,28.127,14.679,27.813,14.991z"></path>
+						                </g>
+						              </g>
+						            </svg>
+								    	</button>
+							    	</div>
 							    </td>
 							  </tr>
 							  <tr>
@@ -140,24 +144,26 @@
 							    <td>SSMF-3</td>
 							    <td>Третий тип</td>
 							    <td>Сидоров Колыван</td>
-							    <td><time datetime="2017-04-17">17.04.2014</time></td>
-							    <td class="td-hint">
-							    	<button class="btn btn--edit">
-							    		<svg class="icon-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 1 39 39" xml:space="preserve">
-					              <g enable-background="new">
-					                <g>
-					                  <path class="icon-svg-letter" fill-rule="evenodd" clip-rule="evenodd" fill="#000" d="M29.513,13.293l-2.832-2.831c-0.626-0.626-1.641-0.626-2.267,0
-					                  L13.952,20.918c-0.234,0.234-0.352,0.527-0.411,0.83l-3.468,7.013c-0.291,0.789,0.342,1.496,1.131,1.13l7.015-3.466
-					                  c0.303-0.06,0.596-0.177,0.831-0.41l10.462-10.457C30.139,14.933,30.139,13.918,29.513,13.293z M12.173,28.357
-					                  c-0.395,0.183-0.749-0.196-0.565-0.565l2.622-4.33l2.275,2.274L12.173,28.357z M17.917,24.882
-					                  c-0.315-0.314-0.455-0.455-0.519-0.519c0.048,0.048,0.006,0.006-0.026-0.026c-0.005-0.005-0.017-0.017-0.02-0.019
-					                  c0-0.001-0.001-0.002-0.002-0.003l-1.699-1.698c-0.313-0.313-0.266-0.266-0.567-0.566l7.044-7.039l2.852,2.811L17.917,24.882z
-					                   M27.813,14.991l-1.7,1.699l-2.791-2.872l1.658-1.658c0.313-0.313,0.82-0.313,1.133,0l1.7,1.699
-					                  C28.127,14.172,28.127,14.679,27.813,14.991z"></path>
-					                </g>
-					              </g>
-					            </svg>
-							    	</button>
+							    <td>
+							    	<time datetime="2017-04-17">17.04.2014</time>
+							    	<div class="td-hint">
+							    		<button class="btn btn--edit">
+								    		<svg class="icon-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 1 39 39" xml:space="preserve">
+						              <g enable-background="new">
+						                <g>
+						                  <path class="icon-svg-letter" fill-rule="evenodd" clip-rule="evenodd" fill="#000" d="M29.513,13.293l-2.832-2.831c-0.626-0.626-1.641-0.626-2.267,0
+						                  L13.952,20.918c-0.234,0.234-0.352,0.527-0.411,0.83l-3.468,7.013c-0.291,0.789,0.342,1.496,1.131,1.13l7.015-3.466
+						                  c0.303-0.06,0.596-0.177,0.831-0.41l10.462-10.457C30.139,14.933,30.139,13.918,29.513,13.293z M12.173,28.357
+						                  c-0.395,0.183-0.749-0.196-0.565-0.565l2.622-4.33l2.275,2.274L12.173,28.357z M17.917,24.882
+						                  c-0.315-0.314-0.455-0.455-0.519-0.519c0.048,0.048,0.006,0.006-0.026-0.026c-0.005-0.005-0.017-0.017-0.02-0.019
+						                  c0-0.001-0.001-0.002-0.002-0.003l-1.699-1.698c-0.313-0.313-0.266-0.266-0.567-0.566l7.044-7.039l2.852,2.811L17.917,24.882z
+						                   M27.813,14.991l-1.7,1.699l-2.791-2.872l1.658-1.658c0.313-0.313,0.82-0.313,1.133,0l1.7,1.699
+						                  C28.127,14.172,28.127,14.679,27.813,14.991z"></path>
+						                </g>
+						              </g>
+						            </svg>
+								    	</button>
+							    	</div>
 							    </td>
 							  </tr>
 							</table>
